plugins {
    id 'java'
    id 'idea'
}

group 'com.bdec.training.spark'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:29.0-jre'
    testImplementation 'junit:junit:4.13'
    implementation 'org.apache.spark:spark-sql_2.12:3.0.0'
    implementation 'org.apache.spark:spark-mllib_2.12:3.0.0'
    implementation 'org.apache.spark:spark-sql-kafka-0-10_2.12:3.0.0'
    //testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

//org.gradle.jvmargs="--add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \ --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"

//applicationDefaultJvmArgs = ["--add-exports=java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens=java.base/java.lang=ALL-UNNAMED", "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED ", "--add-opens=java.base/java.io=ALL-UNNAMED", "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"]

test {
    useJUnit()
}

tasks.withType(JavaCompile) {
    options.release = 8
}